Add description to all three recipes.

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Chocolate Cake</h1>
         <img src="images/cake.jpg" alt="Chocolate Cake">
+        <h2><b>Description</b></h2>
+        <P>This Chocolate cake recipe is originally pulled from <a href="https://www.allrecipes.com/recipe/218792/ggs-chocolate-sheet-cake/">here</a>, courtesy of Allrecipes. This is a simple Chocolate sheet cake.</P>
         <h3><b>Ingredients</b></h3>
         <Ul>
             <li>2 cups white sugar</li>
