--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Mac and Cheese</h1>
         <img src="images/macandcheese.jpg" alt="Mac and Cheese">
+        <h2><b>Description</b></h2>
+        <P>This Mac and Cheese recipe is originally pulled from <a href="https://www.allrecipes.com/copycat-chick-fil-a-mac-and-cheese-recipe-8572260">here</a>, courtesy of Allrecipes. This is a simple Chic Fil A Mac and Cheese style recipe.</P>
         <h3><b>Ingredients</b></h3>
         <Ul>
             <li>8 ounces elbow macaroni, or other short pasta (shells or fusilli)</li>
