--- a/recipes/pulledpork.html
+++ b/recipes/pulledpork.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Pulled Pork</h1>
         <img src="images/pulledpork.jpg" alt="Pulled Pork">
+        <h2><b>Description</b></h2>
+        <P>This Pulled Pork recipe is originally pulled from <a href="https://www.allrecipes.com/recipe/92462/slow-cooker-texas-pulled-pork/">here</a>, courtesy of Allrecipes. This is a simple Slow Cooker Texas Pulled Pork sandwich.</P>
         <h3><b>Ingredients</b></h3>
         <Ul>
             <li>1 teaspoon vegetable oil</li>
