Add home links to each recipe.

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Home</a>
         <h1>Chocolate Cake</h1>
         <img src="images/cake.jpg" alt="Chocolate Cake">
         <h2><b>Description</b></h2>
