--- a/recipes/pulledpork.html
+++ b/recipes/pulledpork.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Home</a>
         <h1>Pulled Pork</h1>
         <img src="images/pulledpork.jpg" alt="Pulled Pork">
         <h2><b>Description</b></h2>
