--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Home</a>
         <h1>Mac and Cheese</h1>
         <img src="images/macandcheese.jpg" alt="Mac and Cheese">
         <h2><b>Description</b></h2>
